# open-internet-reference

./: .gitignore  Axona Constitutional & Public Policy Reference Manual.docx  Axona_Legal_Outreach_Contacts.docx  Axona_Legal_Outreach_Contacts.md  Axona_Legal_Outreach_Contacts_Expanded.docx  CHANGELOG.md  CITATION_GUIDE.md  CONTRIBUTING.md  DATA_MODEL.md  EDITORIAL_WORKFLOW.md  LICENSE  MCP_SERVER.md  OIR Bootstrap Prompt.txt  Open Internet Reference Project Charter.docx  Open Internet Reference Roadmap.docx  PROJECT_CHARTER.md  PUBLISHING.md  README.md  RESEARCH_DEBT.md  RESEARCH_STANDARDS.md  ROADMAP.md  RestartAndUpdateOIR.sh  SOURCE_INTAKE.md  STYLE_GUIDE.md  StartLocalServer.bat  StartLocalServer.sh  TAXONOMY.md  mkdocs.yml  pyproject.toml
.cursor/: README.md  mcp.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  DECAP_CMS_OAUTH.md  labels.yml  pull_request_template.md
bibliography/: README.md
contacts/: CONTACT-ACLU.md  CONTACT-CDT.md  CONTACT-COOLEY.md  CONTACT-EFF.md  CONTACT-EPIC.md  CONTACT-FENWICK.md  CONTACT-FSF.md  CONTACT-INSTITUTE-FOR-FREE-SPEECH.md  CONTACT-INSTITUTE-FOR-JUSTICE.md  CONTACT-KNIGHT-FIRST-AMENDMENT.md  CONTACT-OSI.md  CONTACT-PERKINS-COIE.md  CONTACT-PUBLIC-KNOWLEDGE.md  CONTACT-RCFP.md  CONTACT-SFLC.md  CONTACT-SOFTWARE-FREEDOM-CONSERVANCY.md  CONTACT-WILSON-SONSINI.md  README.md
deploy/: README.md  deploy.sh  generate_site_stats.sh  setup.sh  webhook.py
handbook/: README.md
intake/: README.md  axona-claim-queue.md  candidate-entities.md  candidate-topics.md  verification-queue.md
knowledge/: README.md
oir_mcp/: __init__.py  (+2 more)
(+331 files in other folders)
